crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__tuple__tests__error_trailing_comma.snap
---
source: crates/alder-parse/src/pattern/tuple.rs
description: "Code:\n\n(a, b,)"
---
Tuple(
    Expr(
        Start(
            1,
            7,
        ),
        1,
        7,
    ),
    1,
    1,
)
