crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__tuple__tests__error_unclosed.snap
---
source: crates/alder-parse/src/pattern/tuple.rs
description: "(a, b"
---
Tuple(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 1,
            },
            boundary: Position {
                line: 1,
                column: 6,
            },
            unexpected: Position {
                line: 1,
                column: 6,
            },
        },
    ),
    1,
    1,
)
