crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__tuple__tests__parenthesized.snap
---
source: crates/alder-parse/src/pattern/tuple.rs
description: "Code:\n\n(foo)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 2,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Var(
        "foo",
    ),
}
