crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__tuple__tests__parenthesized_single.snap
---
source: crates/alder-parse/src/pattern/tuple.rs
description: (x)
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 2,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Var(
        "x",
    ),
}
