crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__tuple__tests__parenthesized_trailing_comma.snap
---
source: crates/alder-parse/src/pattern/tuple.rs
description: "(x,)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Var(
        "x",
    ),
}
